# libusbk_examples

./: AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md
results/: device1_descriptor.txt  device1_windbg_01.txt  device1_windbg_02.txt
src/: CMakeLists.txt  altsetting_main.cpp  log.c  log.h  log_api.h  portable_string.h
